// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageGallery variant grid matches snapshot 1`] = `
<section
  class="imageGallery imageGallery--grid"
  data-max-width="wide"
  data-variant="grid"
>
  <div
    class="imageGallery_inner"
  >
    <ul
      class="imageGallery_list"
    >
      <li
        class="imageGallery_item"
      >
        <div
          class="imageGallery_media"
        >
          <div
            aria-label="Snap"
            data-testid="site-image-stub"
            role="img"
          />
        </div>
      </li>
    </ul>
  </div>
</section>
`;

exports[`ImageGallery variant lightbox matches snapshot 1`] = `
<section
  class="imageGallery imageGallery--lightbox"
  data-max-width="wide"
  data-variant="lightbox"
>
  <div
    class="imageGallery_inner"
  >
    <ul
      class="imageGallery_list"
    >
      <li
        class="imageGallery_item"
      >
        <div
          class="imageGallery_media"
        >
          <div
            aria-label="Snap"
            data-testid="site-image-stub"
            role="img"
          />
        </div>
        <button
          aria-disabled="true"
          class="imageGallery_lightboxBtn"
          disabled=""
          type="button"
        >
          View
        </button>
      </li>
    </ul>
  </div>
</section>
`;

exports[`ImageGallery variant masonry matches snapshot 1`] = `
<section
  class="imageGallery imageGallery--masonry"
  data-max-width="wide"
  data-variant="masonry"
>
  <div
    class="imageGallery_inner"
  >
    <ul
      class="imageGallery_list"
    >
      <li
        class="imageGallery_item"
      >
        <div
          class="imageGallery_media"
        >
          <div
            aria-label="Snap"
            data-testid="site-image-stub"
            role="img"
          />
        </div>
      </li>
    </ul>
  </div>
</section>
`;
